XMLExper/m12/m12_50_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:750:111: error: lvalue required as left operand of assignment
  750 |         /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(returnNode) = CreateUnlinkedNode<XMLComment>( _commentPool );
      |                                                                                                               ^
diff: tinyxml2.S: No such file or directory
